--- a/.github/workflows/python-app.yml
+++ b/.github/workflows/python-app.yml
@@ -5,7 +5,7 @@ name: Python application
 
 on:
   push:
-    branches: [ test ]
+    branches: [ main ]
 #   pull_request:
 #     branches: [ main ]
 
